--- a/HorizonAirways/WebContent/css/passenger.css
+++ b/HorizonAirways/WebContent/css/passenger.css
@@ -29,7 +29,7 @@ textarea{
 	resize:none;
 }
 
-.submit {
+.submit, .horizonButton {
 	margin-left: 120px;
 	margin-top: 10px;
 	width: 100px;
@@ -46,7 +46,7 @@ textarea{
 	color: #FFF;
 }
 
-.submit:hover {
+.submit:hover,.horizonButton:hover {
 	cursor: pointer;
 	background:-o-linear-gradient(bottom, #7f0000 5%, #ff5656 100%);	
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #7f0000), color-stop(1, #ff5656) );	
